syntax = "proto3";

package storage;

option go_package = "github.com/debs/debs/proto;storage";

message BatchPutRequest {
  string clientId = 1;
  repeated PutRequest requests = 2;
}

message BatchPutResponse {
  // key means entryId
  map<uint64, PutResponse> responses = 1;
}

message PutRequest {
  string clientId = 1;
  uint64 shardId = 2;
  uint32 entryId = 3;
  bytes value = 4;
  repeated Index indexes = 5;
}

message Index {
  string key = 1;
  bytes value = 2;
}

message PutResponse {
  Code code = 1;
}

message GetRequest {
  uint64 shardId = 1;
  uint32 entryId = 2;
}

message GetResponse {
  Code code = 1;
  uint64 shardId = 2 ;
  uint32 entryId = 3;
  bytes value = 4;
}

message BatchGetRequest {
  uint64 shardId = 1;
  repeated uint32 entryIds = 2;
}

message NewShardRequest {
  string clientId = 1;
}

message NewShardResponse {
  Code code = 1;
  uint64 shardId = 2;
}

message DeleteShardRequest {
  uint64 shardId = 1;
}

message DeleteShardResponse {
  Code code = 1;
}

message CloseShardRequest {
  uint64 shardId = 1;
}

message CloseShardResponse {
  Code code = 1;
}

enum Code {
  OK = 0;
  NOT_FOUND = 1;
  INVALID_ARGUMENT = 2;
}

service StorageService {
  // put
  rpc Put(PutRequest) returns (PutResponse);
  rpc BatchPut(BatchPutRequest) returns (BatchPutResponse);

  //  get
  rpc Get(GetRequest) returns (GetResponse);
  rpc BatchGet(BatchGetRequest) returns (stream GetResponse);

  // shard
  // NewShard Create a new shard with given clientId, a shard could only written by one clientId.
  // If another clientId tries to write to the shard, it will fail.
  // A shard means a segment of data which is stored in a file.
  // After a shard is created, it should register itself with the volumeId in the metadata store, so the client can
  // get the volumeId by the shardId, and the client can connect to the node which owns the volume.
  rpc NewShard(NewShardRequest) returns (NewShardResponse);

  // DeleteShard delete a shard in the metadata store and the file store.
  rpc DeleteShard(DeleteShardRequest) returns (DeleteShardResponse);

  // CloseShard Close a shard, so it become read-only.
  rpc CloseShard(CloseShardRequest) returns (CloseShardResponse);
}